--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -12,6 +12,7 @@
     &__content {
 
       &__label {
+        margin-top: 20px;
         margin-bottom: 8px;
         color: rgba(0,0,0,0.5);
       }
