Work on advanced customer pages

--- a/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.html
+++ b/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.html
@@ -20,6 +20,11 @@
     </div>
 
     <div class="item">
+      <div class="key">Type</div>
+      <div class="value">{{transaction.type}}</div>
+    </div>
+
+    <div class="item">
       <div class="key">Card</div>
       <div class="value">{{transaction.processorResponse.getCard().brand}}</div>
     </div>
