--- a/src/app/pages/customer-advanced-page/rebill-item-components/info-table/info-table.component.html
+++ b/src/app/pages/customer-advanced-page/rebill-item-components/info-table/info-table.component.html
@@ -1,20 +1,20 @@
-<div *ngIf="rebill" class="details" [class.details--column]="columnStyle">
-  <div class="item" [class.item--column]="columnStyle">
+<div *ngIf="rebill" class="details">
+  <div class="item">
     <div>Order Number</div>
     <div>{{rebill.parentSession.alias}}</div>
   </div>
 
-  <div class="item" [class.item--column]="columnStyle">
+  <div class="item">
     <div>Initial Order Date</div>
     <div>{{rebill.parentSession.createdAt | formatDateTime}}</div>
   </div>
 
-  <div class="item" [class.item--column]="columnStyle">
+  <div class="item">
     <div>Rebill No</div>
     <div>{{calculateCycle()}}</div>
   </div>
 
-  <div class="item" [class.item--column]="columnStyle">
+  <div class="item">
     <div>Campaign</div>
     <div class="campaign" [routerLink]="['/campaigns', rebill.parentSession.campaign.id]">{{rebill.parentSession.campaign.name}}</div>
   </div>
