--- a/src/assets/scss/_menu.scss
+++ b/src/assets/scss/_menu.scss
@@ -19,3 +19,23 @@
     font-weight: normal !important;
   }
 }
+
+.transactions-details-item {
+  margin: 0 15px;
+  padding: 10px 0;
+  font-size: 13px;
+  line-height: 24px;
+  color: #202124;
+  border-top: 1px solid rgba(0,0,0,0.12);
+  font-family: Roboto, serif;
+
+  &:first-of-type {
+    border-top: none;
+  }
+
+  div {
+    &:first-of-type {
+      font-weight: 500;
+    }
+  }
+}
