--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -57,7 +57,7 @@ $main-blue: #5383C3;
     color: $error-color;
   }
 
-  .mat-input-underline {
+  .mat-form-field-underline {
     background-color: $error-color;
 
     span {
