--- a/src/assets/scss/_graph-qldocs.scss
+++ b/src/assets/scss/_graph-qldocs.scss
@@ -1,13 +1,13 @@
 .search-queries {
-  .mat-input-wrapper {
+  .mat-form-field-wrapper {
     padding-bottom: 0;
   }
 
-  .mat-input-infix {
+  .mat-form-field-infix {
     border-top: none;
   }
 
-  .mat-input-underline {
+  .mat-form-field-underline {
     display: none;
   }
 
