--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -236,19 +236,19 @@ app-topnav {
   color: white;
   font-size: 16px;
 
-  .mat-input-wrapper {
+  .mat-form-field-wrapper {
     padding-bottom: 0;
   }
 
-  .mat-input-infix {
+  .mat-form-field-infix {
     border-top: none;
   }
 
-  .mat-input-placeholder {
+  .mat-form-field-placeholder {
     color: white;
   }
 
-  .mat-input-underline {
+  .mat-form-field-underline {
     display: none;
   }
 
