--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -23,7 +23,7 @@
         mat-form-field {
           margin: 0;
 
-          .mat-input-wrapper {
+          .mat-form-field-wrapper {
             margin-top: 0;
             margin-bottom: 20px;
           }
@@ -84,7 +84,7 @@
             height: 80px;
           }
 
-          .mat-input-wrapper {
+          .mat-form-field-wrapper {
             position: relative;
             margin: 0;
           }
