--- a/src/assets/scss/_transaction-view.scss
+++ b/src/assets/scss/_transaction-view.scss
@@ -75,7 +75,7 @@ $card-title-color: #5B9BE1;
         width: 100px;
         color: rgba(0, 0, 0, 0.5);
 
-        .mat-form-field-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
       }
