--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -115,7 +115,7 @@ $default-padding: 14px 12px 6px;
       mat-form-field {
         margin: 0;
 
-        .mat-form-field-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
       }
@@ -276,7 +276,7 @@ $default-padding: 14px 12px 6px;
     }
 
     .input-disabled {
-      .mat-form-field-underline {
+      .mat-input-underline {
         border-top: 1px solid rgba(0, 0, 0, 0.4);
         background-image: none;
       }
@@ -287,7 +287,7 @@ $default-padding: 14px 12px 6px;
     }
 
     .no-margin {
-      .mat-form-field-wrapper {
+      .mat-input-wrapper {
         margin: 0;
       }
     }
