--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -59,7 +59,7 @@
   }
 
   &--search-input {
-    .mat-input-wrapper {
+    .mat-form-field-wrapper {
       padding-bottom: 0;
     }
 
@@ -67,7 +67,7 @@
       border-top: none;
     }
 
-    .mat-input-underline {
+    .mat-form-field-underline {
       display: none;
     }
   }
