Three even columns for query/mutation card and button for response style changed.

--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.html
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="details">
-    <div class="title">QUERY</div>
+    <div class="title">EXAMPLE QUERY</div>
     <pre>{{example | formatGraphQl}}</pre>
   </div>
   <div class="line"></div>
   <div class="details">
     <div class="response-header">
-      <div class="title">RESPONSE</div>
+      <div class="title">EXAMPLE RESPONSE</div>
       <button (click)="navigateToResponseType()">{{fieldName}}</button>
     </div>
     <pre>{{response}}</pre>
