--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -4,6 +4,7 @@
       <div class="field__header">
         <div class="type__name">{{type.name}}</div>
         <div class="field__name">
+          <mat-icon *ngIf="isQuery || isMutation" class="arrow" (click)="navigateToGraph()">arrow_back</mat-icon>
           <div id="{{field.name}}">{{field.name}}</div>
           <mat-icon *ngIf="!(isQuery || isMutation)" class="link" matTooltip="" ngxClipboard (click)="navigateTo()">link</mat-icon>
         </div>
