Remove tooltip from side search.

--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.html
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.html
@@ -20,7 +20,7 @@
         (click)="navigateTo(child, searchItem.name); selectedItem = searchItem.name + child"
         class="side-search__item__child"
         [class.selected]="searchItem.name + child === selectedItem">
-        <span matTooltip="{{child}}">{{child}}</span>
+        <span>{{child}}</span>
       </div>
     </div>
   </ng-container>
