--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
@@ -16,39 +16,45 @@
     }
 }
 
-&__item {
-  margin: 20px 30px 24px 20px;
-  font-size: 16px;
+  &__item {
+    margin: 20px 30px 24px 20px;
+    font-size: 16px;
 
-  .selected {
-    background-color: #E2E3E4;
-  }
+    .selected {
+      background-color: #E2E3E4;
+    }
 
-  &__title {
-    margin-bottom: 14px;
-    font-weight: 500;
-    cursor: pointer;
-  }
+    &__title {
+      margin-bottom: 14px;
+      font-weight: 500;
+      cursor: pointer;
+    }
 
-  &__child {
-    margin-bottom: 6px;
-    white-space: nowrap;
-    font-size: 13px;
-    line-height: 32px;
-    cursor: pointer;
-    margin-left: 12px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-left: 10px;
-    padding-right: 5px;
+    &__child {
+      margin-bottom: 6px;
+      white-space: nowrap;
+      font-size: 13px;
+      line-height: 32px;
+      cursor: pointer;
+      margin-left: 12px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      padding-left: 10px;
+      padding-right: 5px;
 
-    &:hover {
-      span {
-        border-bottom: 1px solid;
+      &:hover {
+        span {
+          border-bottom: 1px solid;
+        }
       }
     }
   }
-}
+
+  &__list {
+    margin-top: 20px;
+    overflow: auto;
+    height: calc(100vh - 293px);
+  }
 
   .line {
     margin: 0 20px;
