--- a/src/app/pages/documentation/graph-docs-2/graph-docs-2.component.html
+++ b/src/app/pages/documentation/graph-docs-2/graph-docs-2.component.html
@@ -1,1 +1,1 @@
-<graphql-docs-2 [endpoint]="endpoint" [headers]="headers"></graphql-docs-2>
+<graphql-docs-2 [endpoint]="endpoint" [headers]="headers" [showSidenav]="showSidenav"></graphql-docs-2>
