--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.scss
@@ -17,11 +17,15 @@
     overflow-y: auto;
     overflow-x: hidden;
     padding: 20px 20px;
-    width: calc(100vw - 490px);
+    width: calc(100vw - 479px);
     background: #F0F3F4;
     display: inline-block;
     float: right;
     height: calc(100vh - 220px);
+  }
+
+  .showSidenav {
+    width: calc(100vw - 669px);
   }
 
   mat-spinner {
