Copy to clipboard link to specific type, always show link icon.

--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -5,8 +5,8 @@
         <div class="type__name">{{type.name}}</div>
         <div class="field__name">
           <mat-icon *ngIf="isQuery || isMutation" class="arrow" (click)="navigateToGraph()">arrow_back</mat-icon>
-          <div id="{{field.name}}">{{field.name}}</div>
-          <mat-icon *ngIf="!(isQuery || isMutation)" class="link" matTooltip="" ngxClipboard (click)="navigateTo()">link</mat-icon>
+          <div id="{{field.name}}" (click)="navigateTo()">{{field.name}}</div>
+          <mat-icon class="link" matTooltip="Share, Copy to clipboard" ngxClipboard [cbContent]="getShareLink()">link</mat-icon>
         </div>
       </div>
 
