--- a/src/app/graph-qldocs-2/components/type-card/type-card.component.html
+++ b/src/app/graph-qldocs-2/components/type-card/type-card.component.html
@@ -3,8 +3,8 @@
     <div class="type__name">TYPE</div>
     <div class="field__name">
       <mat-icon *ngIf="isType" class="arrow" (click)="navigateToGraph()">arrow_back</mat-icon>
-      <div id="{{type.name}}">{{type.name}}</div>
-      <mat-icon *ngIf="!isType" class="link" matTooltip="" ngxClipboard (click)="navigateTo()">link</mat-icon>
+      <div id="{{type.name}}" (click)="navigateTo()">{{type.name}}</div>
+      <mat-icon class="link" matTooltip="Share, Copy to clipboard" ngxClipboard [cbContent]="getShareLink()">link</mat-icon>
     </div>
     <div class="type__description">{{type.description}}</div>
   </div>
