--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
@@ -6,12 +6,12 @@
 
   <ng-template #load>
     <div class="docs__sidenav">
-      <side-search [searchItems]="searchItems"></side-search>
+      <side-search (filterTypes)="filterTroughAllTypes($event)" [searchItems]="searchItems"></side-search>
     </div>
     <div class="docs__content" [class.showSidenav]="showSidenav">
       <ng-container *ngIf="isAll">
-        <doc-type *ngFor="let aType of queryMutationTypes" [type]="aType" [isAll]="true"></doc-type>
-        <doc-type *ngFor="let aType of otherTypes" [otherTypes]="aType" [isAll]="true"></doc-type>
+        <doc-type *ngFor="let aType of queryMutationTypesFiltered" [type]="aType" [isAll]="true"></doc-type>
+        <doc-type *ngFor="let aType of otherTypesFiltered" [otherTypes]="aType" [isAll]="true"></doc-type>
       </ng-container>
       <ng-container *ngIf="isQuery || isMutation">
         <doc-type [isMutation]="isMutation" [isQuery]="isQuery" [isType]=false [type]="type" [field]="field"></doc-type>
