--- a/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.html
+++ b/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.html
@@ -33,8 +33,8 @@
       </ng-container>
 
       <ng-template #pastrebillactions>
-        <button mat-button>Refund All</button>
-        <button mat-button>Return All</button>
+        <button mat-button (click)="openRefundDialog()" *ngIf="canRefund()">Refund</button>
+        <button mat-button (click)="openReturnDialog()" *ngIf="canReturn()">Return</button>
         <button mat-button>Track Delivery</button>
         <div class="separator separator--buttons"></div>
         <button mat-button (click)="rebillSelected.emit(rebill)">Order #{{rebill.parentSession.alias}} <mat-icon>keyboard_arrow_right</mat-icon></button>
