Remove shadow and add border to side nav on desktop view, style side search accordingly.

--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -122,3 +122,8 @@ terms-and-conditions {
     color: white;
   }
 }
+
+.removeShadow {
+  box-shadow: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+}
