--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <mat-sidenav-container [autosize]="true">
-  <mat-sidenav (mouseenter)="hover(true)" (mouseleave)="hover(false)" #sidenav
+  <mat-sidenav (mouseenter)="hover(true)" (mouseleave)="hover(false)" #sidenav [class.removeShadow]="removeShadow"
               [mode]="(navigation.mediumScreenAndDown || showOnHover) ? 'over' : 'side'"
               [opened]="showSidenav || !navigation.mediumScreenAndDown">
     <app-sidenav [isHovering]="isHovering || showSidenav || navigation.mediumScreenAndDown"></app-sidenav>
