--- a/src/app/pages/features-page/features-index/features.component.html
+++ b/src/app/pages/features-page/features-index/features.component.html
@@ -1,27 +1,35 @@
 <features-header
   [path]="['SIX Administration', 'Features']">
 </features-header>
-<div>
+<div class="features">
 
-  <div class="entity-index__title">
-    {{'Features' | translate}}
-  </div>
+  <div class="container">
+    <!--<button mat-button (click)="save()">Save</button>-->
+    <button mat-button (click)="fetch()">Reset all to defaults</button>
 
-  <div class="flags" *ngIf="featureFlags">
-    <div class="flag" *ngFor="let flag of featureFlags.flags">
-      <mat-checkbox [checked]="flag.isDefault" (change)="toggle(flag)" ></mat-checkbox> <span class="name">{{flag.name}}</span>  - {{flag.description}}
-      <div  class="flag" *ngFor="let f of flag.flags">
-        <mat-checkbox [checked]="f.isDefault" [disabled]="!flag.isDefault" (change)="toggle(f)"></mat-checkbox> <span class="name">{{f.name}}</span>  - {{f.description}}
+    <div class="flags" *ngIf="featureFlags">
+
+      <div class="flag flag-outer" *ngFor="let flag of featureFlags.flags">
+
+        <div class="header">
+          <div class="name">{{flag.name}}</div>
+          <mat-slide-toggle [(ngModel)]="flag.isDefault" (change)="toggle(flag)"></mat-slide-toggle>
+        </div>
+        <div class="description" *ngIf="flag.name !== flag.description">{{flag.description}}</div>
+
+        <div  class="flag flag-inner" *ngFor="let f of flag.flags">
+          <div class="header">
+            <div class="name">{{f.name}}</div>
+            <mat-slide-toggle [(ngModel)]="f.isDefault" (change)="toggle(f)" [disabled]="!flag.isDefault" [checked]="f.isDefault"></mat-slide-toggle>
+          </div>
+          <div class="description" *ngIf="f.name !== f.description">{{f.description}}</div>
+        </div>
+
+        <div class="line"></div>
+
       </div>
+
     </div>
   </div>
-
-  <br>
-
-  <div class="buttons">
-    <!--<button mat-button (click)="save()">Save</button>-->
-    <button mat-button (click)="fetch()">Reset to defaults</button>
-  </div>
-
 </div>
 
