Implement refund and work on processing overlays

--- a/src/app/dialog-modals/refund-dialog/refund-dialog.component.html
+++ b/src/app/dialog-modals/refund-dialog/refund-dialog.component.html
@@ -46,6 +46,6 @@
 
   <div class="buttons">
     <button mat-button (click)="close()">CANCEL</button>
-    <button mat-button>PROCESS</button>
+    <button mat-button (click)="refund()" [disabled]="!canRefund()" [class.refund-enabled]="canRefund()">REFUND</button>
   </div>
 </div>
