--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -94,6 +94,13 @@ mat-dialog-container {
   }
 }
 
+.panel-transparent {
+  mat-dialog-container {
+    background: rgba(0,0,0,0);
+    box-shadow: none;
+  }
+}
+
 .backdrop-none {
   background: rgba(0,0,0,0);
 
