Add refund to order expanded view

--- a/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-rebills/customer-advanced-rebills.component.html
@@ -32,7 +32,7 @@
 
         <mat-tab>
           <div *ngIf="selectedRebill">
-            <rebill-expanded-details [rebill]="selectedRebill" (backButtonSelected)="viewAllRebills()"></rebill-expanded-details>
+            <rebill-expanded-details [rebill]="selectedRebill" (backButtonSelected)="viewAllRebills()" (transactionRefunded)="transactionRefunded.emit($event)"></rebill-expanded-details>
           </div>
         </mat-tab>
 
